--- a/molecule.yml
+++ b/molecule.yml
@@ -1,8 +1,8 @@
 ---
 dependency:
   name: galaxy
-driver:
-  name: none
+#driver:
+  #name: none
 platforms:
   - name: centos7
     image: milcom/centos7-systemd
